--- a/templates/include/_nav.html.twig
+++ b/templates/include/_nav.html.twig
@@ -20,7 +20,7 @@
             Espace admin
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Dashboard</a></li>
+            <li><a class="dropdown-item" href="{{ path('show_dashboard') }}">Dashboard</a></li>
             <li><a class="dropdown-item" href="{{ path('create-article') }}">Ajouter un article</a></li>
             <li><a class="dropdown-item" href="#">Ajouter une catégorie</a></li>
             {# <li><hr class="dropdown-divider"></li>
