--- a/templates/article/show_article.html.twig
+++ b/templates/article/show_article.html.twig
@@ -17,7 +17,7 @@
 					<p class="h4 text-center mb-3 text-secondary">{{ article.subtitle }}</p>
 				</div>
 				<ul class="list-group list-group-flush">
-					<li class="list-group-item text-center text-muted">Créé le {{ article.createdAt | date('d/m/Y H:i. ') }} <span class="text-muted">Mis à jour le {{ article.updatedAt | date('d/m/Y H:i.') }}</span> </li>
+					<li class="list-group-item text-center text-muted">Créé le {{ article.createdAt | date('d/m/Y H:i. ') }} | <span class="text-muted">Mis à jour le {{ article.updatedAt | date('d/m/Y H:i.') }}</span> </li>
 				</ul>
 				<img class="img-custom" src="{{ asset('uploads/') ~ article.photo }}" alt="{{ article.title }}">
 				<div class="card-body">
@@ -28,6 +28,7 @@
 
 		</div>
 	</div>
-
+{# {{ render(controller('App\Controller\CommentaryController::addCommentary', ['id', article.id]) ) }} #}
+{{ render(url('add_commentary', {'id' : article.id}) ) }}
 
 {% endblock %}
