--- a/templates/article/show_article.html.twig
+++ b/templates/article/show_article.html.twig
@@ -5,7 +5,6 @@
 	<div class="row">
 		<div class="col-12">
 			{% include "include/_flashes.html.twig" %}
-
 		</div>
 	</div>
 
@@ -17,18 +16,48 @@
 					<p class="h4 text-center mb-3 text-secondary">{{ article.subtitle }}</p>
 				</div>
 				<ul class="list-group list-group-flush">
-					<li class="list-group-item text-center text-muted">Créé le {{ article.createdAt | date('d/m/Y H:i. ') }} | <span class="text-muted">Mis à jour le {{ article.updatedAt | date('d/m/Y H:i.') }}</span> </li>
+					<li class="list-group-item text-center">Créé le
+						{{ article.createdAt | date('d/m/Y H:i') }}
+						|
+						<span class="text-muted">Mis à jour le
+							{{ article.updatedAt | date('d/m/Y H:i') }}</span>
+					</li>
 				</ul>
 				<img class="img-custom" src="{{ asset('uploads/') ~ article.photo }}" alt="{{ article.title }}">
 				<div class="card-body">
-					<p class="card-text my-4 col-10 mx-auto">{{article.content | raw }}</p>{#raw interpretation de html donc desactivation de sécurité#}
+					<p class="card-text my-4 col-10 mx-auto">{{article.content | raw }}</p>
+					{#raw interpretation de html donc desactivation de sécurité#}
 				</div>
 			</div>
 
 
 		</div>
 	</div>
-{# {{ render(controller('App\Controller\CommentaryController::addCommentary', ['id', article.id]) ) }} #}
-{{ render(url('add_commentary', {'id' : article.id}) ) }}
+	{{ render(controller('App\\Controller\\CommentaryController::addCommentary', {'id': article.id} )) }}
+
+	{# {{ render(url('add_commentary', {'id' : article.id}) ) }} #}
+	
+	<hr>
+
+	<h3>Espace commentaires</h3>
+
+	{% if commentaries is not null %}
+		<div class="row">
+			<div class="col-5">
+			
+				{% for commentary in commentaries %}
+
+					<div class="bg light shadow my-2">
+						<p class="ps-3 text-muted">Créé le : {{ commentary.createdAt | date('d/m/Y') }} | Écrit par</p>
+						<p class="ps-3">{{ commentary.comment | raw}}</p>
+					</div>
+						
+				{% endfor %}
+
+			</div>
+		</div>
+
+
+	{% endif %}
 
 {% endblock %}
