--- a/templates/article/show_articles_from_categorie.html.twig
+++ b/templates/article/show_articles_from_categorie.html.twig
@@ -11,6 +11,8 @@
 
 			<hr>
 
+				<a href="{{ path('show_article', {'cat_alias': article.category.alias, 'article_alias': article.alias, 'id': article.id}) }}" class="text-dark text-decoration-none">
+
 				<div class="card mb-3" style="max-width: 100%; height: 230px;">
 					<div class="row g-0">
 						<div class="col-md-4">
@@ -21,17 +23,23 @@
 								<h5 class="card-title">{{article.title | length > 80 ? article.title|slice(0,80) ~ '...' : article.title}}</h5>
 								<p class="card-text">{{article.subtitle | length > 150 ? article.subtitle|slice(0,150) ~ '...' : article.subtitle}}</p>
 								<p class="card-text">
-									<small class="text-muted">Dernière modification {{article.updatedAt | date('d/m/Y')}}</small><span class="text-muted"> | Auteur : </span>
+									<small class="text-muted">Dernière modification {{article.updatedAt | date('d/m/Y')}}</small><span class="text-muted"> | Auteur : {{ article.author.prenom | capitalize }} {{ article.author.nom | upper }} </span>
 								</p>
 							</div>
 						</div>
 					</div>
 				</div>
 
-
+				</a>
 			</div>
 		</div>
-	{% endfor %}
-
+	
+{% else %}
+	<div class="row">
+		<div class="mx-auto col-8">
+			<p class="alert alert-info text-center">La catégorie {{ categorie.name }} ne contient pas encore d'articles</p>
+		</div>
+	</div>
+{% endfor %}
 
 {% endblock %}
