--- a/templates/include/_nav.html.twig
+++ b/templates/include/_nav.html.twig
@@ -9,12 +9,22 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="{{ path('default_home') }}">Accueil</a>
         </li>
+
+        {% if not app.user %}
         <li class="nav-item">
           <a class="nav-link" href="{{ path('user_register') }}">S'incrire</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Se connecter</a>
+          <a class="nav-link" href="{{ path('app_login') }}">Se connecter</a>
         </li>
+        {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
+        </li>
+        {% endif %}
+
+        {% if is_granted('ROLE_ADMIN') %}
+
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Espace admin
@@ -27,10 +37,18 @@
             <li><a class="dropdown-item" href="#">Something else here</a></li> #}
           </ul>
         </li>
+        {% endif %}
         {# <li class="nav-item">
           <a class="nav-link disabled">Disabled</a>
-        </li> #}
+        </li> #}        
       </ul>
+
+      {% if app.user %}
+      <div style="float: right; padding-right: 50px;">
+        <i class="fa fa-user text-warning"></i><span class="text-warning"> Bonjour <span class="text-dark">{{ app.user.prenom }} {{ app.user.nom }}</span></span>
+      </div>
+      {% endif %}
+
     </div>
   </div>
 </nav>
