--- a/templates/article/show_article.html.twig
+++ b/templates/article/show_article.html.twig
@@ -30,7 +30,6 @@
 				</div>
 			</div>
 
-
 		</div>
 	</div>
 
@@ -57,17 +56,24 @@
 			<div class="col-5">
 			
 				{% for commentary in commentaries %}
+					{% if commentary.deletedAt is null %}
+						<div class="bg light shadow my-2">
+							<p class="ps-3 text-muted">Créé le : {{ commentary.createdAt | date('d/m/Y') }} | Écrit par : {{ commentary.author ? commentary.author.prenom | capitalize ~ ' ' ~ commentary.author.nom | upper : "Pas d'auteur" }}
+							{% if commentary.author is same as app.user %}
 
-					<div class="bg light shadow my-2">
-						<p class="ps-3 text-muted">Créé le : {{ commentary.createdAt | date('d/m/Y') }} | Écrit par : {{ article.author.prenom | capitalize }} {{ article.author.nom | upper }} </p>
-						<p class="ps-3">{{ commentary.comment | raw}}</p>
-					</div>
-						
+							<span style="float: right" class="pe-2" onclick="return confirm('Voulez vous archiver ce commentaire ? \n Vous retrouverez ces commentaires dans la partie mes commentaires de votre profil')">
+								<a href="" class="text-danger"><i class="fa fa-times-circle"></i></a>
+							</span>
+							{% endif %}
+							</p>
+
+							<p class="ps-3">{{ commentary.comment | raw}}</p>																																
+						</div>
+					{% endif %}
 				{% endfor %}
 
 			</div>
 		</div>
-
 
 	{% endif %}
 
