--- a/templates/include/_nav.html.twig
+++ b/templates/include/_nav.html.twig
@@ -46,7 +46,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownProfil">
                                 <li><a class="dropdown-item" href="{{ path('show_profile') }}">Mes informations</a></li>
-                                <li><a class="dropdown-item" href="#">Mes commentaires</a></li>
+                                <li><a class="dropdown-item" href="{{ path('show_user_commentary') }}">Mes commentaires</a></li>
                                 {# <li><hr class="dropdown-divider"></li>#}
                                 {# <li><a class="dropdown-item" href="#">Something else here</a></li>#}
                             </ul>
